--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,14 +1,10 @@
-<div class="mdl-grid">
-  <div class="titan-updates mdl-card mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--12-col-desktop" *ngIf="corporation">
-    <div class="mdl-card__title mdl-card--expand mdl-color--teal-300">
-      <h2 class="mdl-card__title-text">{{ corporation.name }} ({{ corporation.ticker }})</h2>
-    </div>
-    <div class="mdl-card__supporting-text mdl-color-text--grey-600">
-      {{ corporation | json }}
-    </div>
-    <div class="mdl-card__actions mdl-card--border">
-      <a href="#" class="mdl-button mdl-js-button mdl-js-ripple-effect" data-upgraded=",MaterialButton,MaterialRipple">Read
-        More<span class="mdl-button__ripple-container"><span class="mdl-ripple"></span></span></a>
-    </div>
+<div class="card" *ngIf="corporation">
+  <div class="card-header">
+    {{ corporation.name }} ({{ corporation.ticker }})
+  </div>
+  <div class="card-body">
+    <img [src]="corporationLogo">
+
+    <p class="card-text">{{ corporation | json }}</p>
   </div>
 </div>
