--- a/frontend/src/app/blueprint/blueprints.component.html
+++ b/frontend/src/app/blueprint/blueprints.component.html
@@ -1,37 +1,40 @@
-<ul class="mdl-list">
-  <div>
-    <label for="sortBy">Sort By</label>
-    <select id="sortBy" [(ngModel)]="sortBy" (ngModelChange)="onSortByChanged($event)">
-      <option *ngFor="let option of sortByOptions">{{ option }}</option>
-    </select>
-  </div>
+<div>
+  <label for="sortBy">Sort By</label>
+  <select id="sortBy" [(ngModel)]="sortBy" (ngModelChange)="onSortByChanged($event)">
+    <option *ngFor="let option of sortByOptions">{{ option }}</option>
+  </select>
+</div>
 
-  <div>
-    <label for="nameFilter">Filter</label>
-    <input type="text" id="nameFilter" [(ngModel)]="nameFilter" (ngModelChange)="onSortByChanged($event)" />
-  </div>
+<div>
+  <label for="nameFilter">Filter</label>
+  <input type="text" id="nameFilter" [(ngModel)]="nameFilter" (ngModelChange)="onSortByChanged($event)" />
+</div>
 
-  <div>
-    <label for="maxProductionCosts">Maximum Production Costs</label>
-    <input type="text" id="maxProductionCosts" [(ngModel)]="maxProductionCosts" (ngModelChange)="onSortByChanged($event)" /> ISK
-  </div>
+<div>
+  <label for="maxProductionCosts">Maximum Production Costs</label>
+  <input type="text" id="maxProductionCosts" [(ngModel)]="maxProductionCosts" (ngModelChange)="onSortByChanged($event)" />
+  ISK
+</div>
 
-  <div *ngFor="let category of categories" style="float: left">
-    <input type="checkbox" id="categoryID:{{category.categoryID}}" value="{{category.categoryID}}" [(ngModel)]="selectedCategories[category.categoryID]" (ngModelChange)="onSortByChanged($event)" />
-    <label for="categoryID:{{category.categoryID}}">{{category.name.en}}</label>
-  </div>
+<div *ngFor="let item of categories | keyvalue" style="float: left">
+  <input type="checkbox" id="categoryID:{{item.key}}" value="{{item.key}}" [(ngModel)]="selectedCategories[item.key]"
+    (ngModelChange)="onSortByChanged($event)" />
+  <label class="pr-1" for="categoryID:{{item.key}}">{{item.value.name.en}}</label>
+</div>
 
-  <div style="clear: both"></div>
+<div style="clear: both"></div>
 
-  <li class="mdl-list__item mdl-list__item--two-line" *ngFor="let product of products">
-    <span class="mdl-list__item-primary-content">
-      <img class="blueprint-avatar mdl-list__item-avatar" src="https://image.eveonline.com/Type/{{ product.typeID }}_64.png" />
-      <span><a [routerLink]="['/manufacturing', product.typeID ]">{{ product.name.en }}</a></span>
-      <span class="mdl-list__item-sub-title">{{ product.profit.perDay.basedOnBuyPrice | number:'1.0-0' }} ISK Profit per Day (based on buy price) / {{ product.profit.perDay.basedOnSellPrice | number:'1.0-0' }} ISK Profit per Day (based on sell price)</span>
-    </span>
-    <span class="mdl-list__item-secondary-content">
-      <span class="mdl-list__item-secondary-info">Owned</span>
-      <a class="mdl-list__item-secondary-action" href="#"><i class="material-icons">star</i></a>
-    </span>
+<ul class="list-group">
+  <li class="list-group-item list-group-item-action flex-column align-items-start" *ngFor="let product of products">
+    <div class="d-flex w-100 justify-content-between">
+      <h5 class="mb-1"><a [routerLink]="['/manufacturing', product.typeID ]">{{ product.name.en }}</a></h5>
+      <small>Owned</small>
+    </div>
+    <p class="mb-1">
+      <img src="https://image.eveonline.com/Type/{{ product.typeID }}_64.png" />
+      {{ product.profit.perDay.basedOnBuyPrice | number:'1.0-0' }} ISK Profit per Day (based on buy price) /
+      {{ product.profit.perDay.basedOnSellPrice | number:'1.0-0' }} ISK Profit per Day (based on sell price)
+    </p>
+    <small>{{ categories[product.categoryID].name.en }}</small>
   </li>
 </ul>
