--- a/frontend/src/app/blueprint/blueprints.component.html
+++ b/frontend/src/app/blueprint/blueprints.component.html
@@ -11,6 +11,11 @@
 </div>
 
 <div>
+  <label for="hasRequiredSkillsOnly">Required Skills only</label>
+  <input type="checkbox" id="hasRequiredSkillsOnly" [(ngModel)]="hasRequiredSkillsOnly" (ngModelChange)="onSortByChanged($event)" />
+</div>
+
+<div>
   <label for="maxProductionCosts">Maximum Production Costs</label>
   <input type="text" id="maxProductionCosts" [(ngModel)]="maxProductionCosts" (ngModelChange)="onSortByChanged($event)" />
   ISK
@@ -28,7 +33,7 @@
   <li class="list-group-item list-group-item-action flex-column align-items-start" *ngFor="let product of products">
     <div class="d-flex w-100 justify-content-between">
       <h5 class="mb-1"><a [routerLink]="['/manufacturing', product.typeID ]">{{ product.name.en }}</a></h5>
-      <small>Owned</small>
+      <img style="width: 32px; height: 32px" src="assets/skill_points_64.png" *ngIf="product.hasRequiredSkills">
     </div>
     <p class="mb-1">
       <img src="https://image.eveonline.com/Type/{{ product.typeID }}_64.png" />
