displaying item info for all items, even non-manufactuable

--- a/frontend/src/app/blueprint/blueprint-detail.component.html
+++ b/frontend/src/app/blueprint/blueprint-detail.component.html
@@ -104,7 +104,7 @@
       </div>
     </ng-template>
   </ngb-tab>
-  <ngb-tab title="Manufacturing">
+  <ngb-tab title="Manufacturing" *ngIf="manufacturing.materials">
     <ng-template ngbTabContent>
       <div class="row p-2">
         <div class="col-7">
