--- a/frontend/src/app/blueprint/blueprint-detail.component.html
+++ b/frontend/src/app/blueprint/blueprint-detail.component.html
@@ -282,7 +282,8 @@
         <div class="form-group row">
           <label for="blueprintME" class="col-sm-4 col-form-label">Blueprint ME</label>
           <div class="col-sm-8">
-            <select id="blueprintME" class="form-control" [disabled]="manufacturing.isTech2">
+            <select name="ME" id="blueprintME" class="form-control" [(ngModel)]="ME" (ngModelChange)="onOptionsChanged($event)"
+              [disabled]="manufacturing.isTech2">
               <option *ngFor="let me of possibleME" [selected]="manufacturing.me == me">{{ me }}</option>
             </select>
           </div>
@@ -290,8 +291,9 @@
         <div class="form-group row">
           <label for="blueprintTE" class="col-sm-4 col-form-label">Blueprint TE</label>
           <div class="col-sm-8">
-            <select id="blueprintTE" class="form-control" [disabled]="manufacturing.isTech2">
-              <option *ngFor="let te of possibleTE" [selected]="manufacturing.te == te">{{ te }}</option>
+            <select name="TE" id="blueprintTE" class="form-control" [(ngModel)]="TE" (ngModelChange)="onOptionsChanged($event)"
+              [disabled]="manufacturing.isTech2">
+              <option *ngFor="let te of possibleTE">{{ te }}</option>
             </select>
           </div>
         </div>
