Added button to copy materials for multibuy in clipboard

--- a/frontend/src/app/blueprint/blueprint-detail.component.html
+++ b/frontend/src/app/blueprint/blueprint-detail.component.html
@@ -136,6 +136,7 @@
               </tr>
             </tbody>
           </table>
+          <button class="btn btn-secondary" (click)="copyMaterialsToClipboard(manufacturing.materials)">Copy</button>
         </div>
         <div class="col-5">
           <div>
@@ -221,6 +222,7 @@
               </tr>
             </tbody>
           </table>
+          <button class="btn btn-secondary" (click)="copyMaterialsToClipboard(manufacturing.invention.materials)">Copy</button>
         </div>
         <div class="col-5">
           <div>
