--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -17,7 +17,7 @@
         <a class="nav-link" routerLink='manufacturing'>Manufacturing</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink='home'>Industry Jobs</a>
+        <a class="nav-link" routerLink='industry/jobs'>Industry Jobs</a>
       </li>
     </ul>
   </div>
