--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -7,16 +7,15 @@
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" routerLink='home'>Home <span class="sr-only">(current)</span></a>
+      <li class="nav-item" [class.active]="url[0]?.path == 'home' || url.length == 0">
+        <a class="nav-link" routerLink='home'>Home</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" [class.active]="url[0]?.path == 'manufacturing'">
         <a class="nav-link" routerLink='manufacturing'>Manufacturing</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" [class.active]="url[0]?.path == 'industry'">
         <a class="nav-link" routerLink='industry/jobs'>Industry Jobs</a>
       </li>
     </ul>
