--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -9,13 +9,13 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item" [class.active]="url[0]?.path == 'home' || url.length == 0">
+      <li class="nav-item" [class.active]="url && (url[0]?.path == 'home' || url.length == 0)">
         <a class="nav-link" routerLink='home'>Home</a>
       </li>
-      <li class="nav-item" [class.active]="url[0]?.path == 'manufacturing'">
+      <li class="nav-item" [class.active]="url && (url[0]?.path == 'manufacturing')">
         <a class="nav-link" routerLink='manufacturing'>Manufacturing</a>
       </li>
-      <li class="nav-item" [class.active]="url[0]?.path == 'industry'">
+      <li class="nav-item" [class.active]="url && (url[0]?.path == 'industry')">
         <a class="nav-link" routerLink='industry/jobs'>Industry Jobs</a>
       </li>
     </ul>
