--- a/frontend/src/app/blueprint/blueprint-detail.component.html
+++ b/frontend/src/app/blueprint/blueprint-detail.component.html
@@ -22,8 +22,13 @@
           <table class="w-50 table table-sm">
             <tbody>
               <tr>
-                <td style="width: 250px">Material Costs</td>
+                <td style="width: 250px">Total Material Costs</td>
                 <td style="text-align: right; width: 150px">{{ manufacturing.costs.totalMaterials | number:'1.0-0' }}
+                  ISK</td>
+              </tr>
+              <tr>
+                <td style="width: 250px">Total Job Cost</td>
+                <td style="text-align: right; width: 150px">{{ manufacturing.costs.totalJobCost | number:'1.0-0' }}
                   ISK</td>
               </tr>
               <tr *ngIf="manufacturing && manufacturing.invention">
@@ -273,7 +278,6 @@
           <div class="col-sm-8">
             <select id="stationType" class="form-control">
               <option>Engineering Complex</option>
-              <option>POS</option>
               <option>Station</option>
             </select>
           </div>
@@ -281,7 +285,14 @@
         <div class="form-group row">
           <label for="system" class="col-sm-4 col-form-label">System</label>
           <div class="col-sm-8">
-            <input id="system" class="form-control" type="text" value="Ikuchi" />
+            <input id="system" class="form-control" type="text" value="Maurasi" />
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="facilityTax" class="col-sm-4 col-form-label">Facility Tax</label>
+          <div class="col-sm-8">
+            <input id="facilityTax" class="form-control" [(ngModel)]="facilityTax"
+              (ngModelChange)="onOptionsChanged($event)" type="text" value="10.0%" />
           </div>
         </div>
         <div class="form-group row">
