--- a/frontend/src/app/blueprint/blueprint-detail.component.html
+++ b/frontend/src/app/blueprint/blueprint-detail.component.html
@@ -291,8 +291,8 @@
         <div class="form-group row">
           <label for="facilityTax" class="col-sm-4 col-form-label">Facility Tax</label>
           <div class="col-sm-8">
-            <input id="facilityTax" class="form-control" [(ngModel)]="facilityTax"
-              (ngModelChange)="onOptionsChanged($event)" type="text" value="10.0%" />
+            <input name="facilityTax" id="facilityTax" class="form-control" [(ngModel)]="facilityTax"
+              (ngModelChange)="onOptionsChanged($event)" type="text" value="0.1" />
           </div>
         </div>
         <div class="form-group row">
