Moved wallet fetching to a cache
This makes more sense, since it is only one value, which can be retrieved any time and can just be cached. We already get the historical values through the journal.

Fixes #458

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="card" *ngIf="corporation">
+<div class="card" *ngIf="corporation && wallets">
   <div class="card-header">
     {{ corporation.name }} ({{ corporation.ticker }})
   </div>
@@ -6,5 +6,7 @@
     <img [src]="corporationLogo">
 
     <p class="card-text">{{ corporation | json }}</p>
+
+    <p class="card-text">{{ wallets | json }}</p>
   </div>
 </div>
